--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.1
 pytz==2020.5
 six==1.15.0
 SQLAlchemy==1.3.22
